...
      return;
    }
    setPage(page + 1);
    fetchPoints();
  };
  return (
    <View style={styles.container} testID="pointsScreen">
      <FlatList
        contentContainerStyle={styles.listContent}
        data={pointsList}
        renderItem={renderRow}
        keyExtractor={keyExtractor}
        initialNumToRender={oneScreensWorth}
...
